Fix title spacing / Fix console error

--- a/src/js/src/discovery/style/discovery.scss
+++ b/src/js/src/discovery/style/discovery.scss
@@ -50,6 +50,7 @@ $primary: var(--jeo-primary-color);
 			font-size: 16px;
 			margin-bottom: 25px;
 			margin-left: 20px;
+			margin-top: 25px;
 		}
 	}
 
